maven环境隔离 添加开发环境dev 测试环境beta 生产环境prod

--- a/pom.xml
+++ b/pom.xml
@@ -275,7 +275,50 @@
       </plugin>
     </plugins>
 
+
+    <!--maven环境隔离添加资源配置-->
+    <resources>
+      <resource>
+        <directory>src/main/resources.${deploy.type}</directory>
+        <excludes>
+          <exclude>*.jsp</exclude>
+        </excludes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
+
   </build>
+
+  <!--maven开发环境隔离-->
+  <!--
+    清除 打包 跳过测试 使用开发环境
+    mvn clean package  -Dmaven.test.skip=true -Pdev
+  -->
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <deploy.type>dev</deploy.type>
+      </properties>
+    </profile>
+    <profile>
+      <id>beta</id>
+      <properties>
+        <deploy.type>beta</deploy.type>
+      </properties>
+    </profile>
+    <profile>
+      <id>prod</id>
+      <properties>
+        <deploy.type>prod</deploy.type>
+      </properties>
+    </profile>
+  </profiles>
 
 
 </project>
