新增RedisPool，未完善

--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -1,4 +1,4 @@
-
+# dev env
 ftp.server.ip=你的FTP服务器ip地址
 ftp.user=mmallftp
 ftp.pass=ftppassword
@@ -8,4 +8,25 @@ ftp.server.http.prefix=http://img.happymmall.com/
 alipay.callback.url=http://www.dianpoint.com/order/alipay_callback.do
 
 password.salt =
+
+# jedis 连接redis 时的配置文件
+# redis config start
+
+# 最大连接数
+redis.max.total=20
+
+# 最大空闲数
+redis.max.idle=10
+
+# 最小空闲数
+redis.min.idle=2
+
+# 从jedis连接池当中获取连接时，检验并返回可用的连接
+redis.test.borrow=true
+
+# 将连接放回jedis连接池时，检验并返回可用的连接
+redis.test.return=true
+
+# redis config end
+
 
