--- a/pom.xml
+++ b/pom.xml
@@ -239,11 +239,14 @@
       <version>1.3</version>
     </dependency>
 
+    <!--二期新增-->
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
-      <version>2.9.0</version>
+      <version>2.6.0</version>
     </dependency>
+
+
   </dependencies>
 
 
