--- a/src/main/resources.beta/mmall.properties
+++ b/src/main/resources.beta/mmall.properties
@@ -9,3 +9,29 @@ alipay.callback.url=http://www.dianpoint.com/order/alipay_callback.do
 
 password.salt =
 
+# jedis 连接redis 时的配置文件
+# redis config start
+
+# redis ip
+redis.ip=127.0.0.1
+
+# redis port
+redis.port=6379
+# 最大连接数
+redis.max.total=20
+
+# 最大空闲数
+redis.max.idle=10
+
+# 最小空闲数
+redis.min.idle=2
+
+# 从jedis连接池当中获取连接时，检验并返回可用的连接
+redis.test.borrow=true
+
+# 将连接放回jedis连接池时，检验并返回可用的连接
+redis.test.return=false
+
+# redis config end
+
+
