--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -12,6 +12,11 @@ password.salt =
 # jedis 连接redis 时的配置文件
 # redis config start
 
+# redis ip
+redis.ip=127.0.0.1
+
+# redis port
+redis.port=6379
 # 最大连接数
 redis.max.total=20
 
@@ -25,7 +30,7 @@ redis.min.idle=2
 redis.test.borrow=true
 
 # 将连接放回jedis连接池时，检验并返回可用的连接
-redis.test.return=true
+redis.test.return=false
 
 # redis config end
 
