--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,14 @@
       <artifactId>jedis</artifactId>
       <version>2.6.0</version>
     </dependency>
+    <!--lombok-->
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.18</version>
+    </dependency>
+
 
 
   </dependencies>
