--- a/src/main/resources.dev/datasource.properties
+++ b/src/main/resources.dev/datasource.properties
@@ -2,8 +2,8 @@
 db.driverClassName=com.mysql.jdbc.Driver
 
 #db.url=jdbc:mysql://192.1.1.1:3306/mmall?characterEncoding=utf-8
-db.url=jdbc:mysql://120.76.142.232:3306/mmall?characterEncoding=utf-8
-db.username=chencong
+db.url=jdbc:mysql://localhost:3306/mmall?characterEncoding=utf-8
+db.username=root
 db.password=123456
 
 
