--- a/src/main/resources.dev/datasource.properties
+++ b/src/main/resources.dev/datasource.properties
@@ -7,10 +7,10 @@ db.username=root
 db.password=123456
 
 
-db.initialSize = 20
-db.maxActive = 50
-db.maxIdle = 20
-db.minIdle = 10
-db.maxWait = 10
-db.defaultAutoCommit = true
-db.minEvictableIdleTimeMillis = 3600000
+db.initialSize=20
+db.maxActive=50
+db.maxIdle=20
+db.minIdle=10
+db.maxWait=10
+db.defaultAutoCommit=true
+db.minEvictableIdleTimeMillis=3600000
