--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -12,11 +12,15 @@ password.salt =
 # jedis 连接redis 时的配置文件
 # redis config start
 
-# redis ip
-redis.ip=127.0.0.1
+# 分布式redis 节点1
+# redis1 ip
+redis_1.ip=127.0.0.1
+redis_2.ip=127.0.0.1
 
 # redis port
-redis.port=6379
+redis_1.port=6379
+redis_2.port=6380
+
 # 最大连接数
 redis.max.total=20
 
