--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,15 @@
       <version>1.16.18</version>
     </dependency>
 
+    <!--spring-session 单点登陆-->
+    <!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis -->
+    <dependency>
+      <groupId>org.springframework.session</groupId>
+      <artifactId>spring-session-data-redis</artifactId>
+      <version>1.2.0.RELEASE</version>
+    </dependency>
+
+
 
 
   </dependencies>
