修改pom文件中spring-session

--- a/pom.xml
+++ b/pom.xml
@@ -255,13 +255,22 @@
 
     <!--spring-session 单点登陆-->
     <!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis -->
-    <dependency>
-      <groupId>org.springframework.session</groupId>
-      <artifactId>spring-session-data-redis</artifactId>
-      <version>1.2.0.RELEASE</version>
-    </dependency>
+      <dependency>
+          <groupId>org.springframework.session</groupId>
+          <artifactId>spring-session-data-redis</artifactId>
+          <version>1.2.0.RELEASE</version>
+      </dependency>
 
-
+      <dependency>
+          <groupId>org.redisson</groupId>
+          <artifactId>redisson</artifactId>
+          <version>2.9.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-avro</artifactId>
+          <version>2.9.0</version>
+      </dependency>
 
 
   </dependencies>
