--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,12 +24,22 @@
     </filter-mapping>
 
     <!--二期新增，重置session过期时间的filter-->
+    <!-- <filter>
+         <filter-name>sessionExpireFilter</filter-name>
+         <filter-class>com.mmall.controller.common.SessionExpireFilter</filter-class>
+     </filter>
+     <filter-mapping>
+         <filter-name>sessionExpireFilter</filter-name>
+         <url-pattern>*.do</url-pattern>
+     </filter-mapping>-->
+
+    <!--Spring session 配置-->
     <filter>
-        <filter-name>sessionExpireFilter</filter-name>
-        <filter-class>com.mmall.controller.common.SessionExpireFilter</filter-class>
+        <filter-name>springSessionRepositoryFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>sessionExpireFilter</filter-name>
+        <filter-name>springSessionRepositoryFilter</filter-name>
         <url-pattern>*.do</url-pattern>
     </filter-mapping>
 
