单节点Tomcat时候关闭订单方法closeOrder

--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -39,3 +39,8 @@ redis.test.return=false
 # redis config end
 
 
+# closeOrderTaskTime start 定时关单
+close.order.task.time.hour=2
+# closeOrderTaskTime end
+
+
