CloseOrderTask当中新增Redis_lock，分布式情况下防止死锁

--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -41,6 +41,9 @@ redis.test.return=false
 
 # closeOrderTaskTime start 定时关单
 close.order.task.time.hour=2
+
+# 毫秒数
+lock.timeout=50000
 # closeOrderTaskTime end
 
 
